Fix: support submenu hidden on mobile (width < 991px)

--- a/static/themes/bitbay/css/style.css
+++ b/static/themes/bitbay/css/style.css
@@ -2414,6 +2414,7 @@ nav.w-nav-menu > ul > li > a.is-active.w--current {
     border: none;
     box-shadow: none;
     float: none;
+    display: block;
   }
 
   header.navbar .dropdown .dropdown-menu li {
